--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </style>
 </head>
 <body>
-  <h1>Tech Opportunities Calendar</h1>
+  <h1>compyute</h1>
 
   <section>
     <h2>Ongoing / Long-Term Programs</h2>
