--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tech Opportunities Calendar</title>
+  <title>compyute</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -111,3 +111,4 @@
 
 </body>
 </html>
+
